Finished info section, fix pending.
Info section formatted, fix needed for subtext below images - text not centred correctly.

--- a/style.css
+++ b/style.css
@@ -94,3 +94,34 @@ ul {
     padding: 5px;
     width: 150px;
 }
+
+.info {
+    background-color: white;
+    height: 500px;
+    text-align: center;
+}
+
+.info-header {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    margin: 52px 0;
+}
+
+.cards {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.section {
+    max-width: 180px;
+}
+
+.info-image {
+    height: 150px;
+    width: 150px;
+    border: 3px solid #3882F6;
+    border-radius: 20px;
+    margin-bottom: 5px;
+}
